--- a/Beacon/Blazor/Components/Songs/SongLanguageList.razor
+++ b/Beacon/Blazor/Components/Songs/SongLanguageList.razor
@@ -12,7 +12,7 @@ text-xs hover:bg-primary hover:text-d-text-accent @(Song.Id == SelectedSong.Id ?
 
 		</div>
 	}
-	<BeaconButton Message="+" OnClick="(() => AddLanguage.InvokeAsync())"></BeaconButton>
+	<BeaconButton Message="+" MessageClass="text-2xl font-thin" OnClick="(() => AddLanguage.InvokeAsync())"></BeaconButton>
 
 </div>
 
