--- a/Beacon/Blazor/Pages/SongLibrary.razor
+++ b/Beacon/Blazor/Pages/SongLibrary.razor
@@ -4,13 +4,13 @@
 <div class="grid-cols-12 grid h-full w-full">
 
 	<!--===== LEFT SIDE ======-->
-	<div class="border-r-2 col-span-6 border-sidepanel bg-container flex h-full flex-col space-y-3 overflow-hidden rounded-r-3xl p-10">
+	<div class="border-r-2 col-span-5 border-sidepanel bg-container flex h-full flex-col space-y-3 overflow-hidden rounded-r-3xl p-10">
 
 
 		<!--[ SEARCH INPUT ]-->
 		<div class="flex w-full flex-col space-y-2">
 			<BeaconSearchMode ActiveSearchMode="currentSearchMode" SearchModeChanged="switchSearchMode"></BeaconSearchMode>
-			<DebounceInput class="bg-default text-accented border-0 h-16 rounded-xl px-3 text-sm focus:ring-1" 
+			<DebounceInput class="bg-default text-accented border-0 h-16 rounded-xl px-3 text-sm ring-l-primary dark:ring-d-primary focus:ring-1 placeholder-l-text dark:placeholder-d-text placeholder-opacity-50 dark:placeholder-opacity-50" 
 							placeholder="Search"
 							DebounceTime="100" ></DebounceInput>
 		</div>
@@ -29,7 +29,7 @@
 		
 
 	<!--===== RIGHT SIDE ======-->
-	<div class="col-span-6 bg-default flex h-full w-full flex-col">
+	<div class="col-span-7 bg-default flex h-full w-full flex-col overflow-auto">
 
 		<!--------[ TOP ]-------->
 		<div class="via-l-container/25 border-b-2 border-sidepanel to-l-container/0 flex h-32 w-full items-center rounded-b-3xl
@@ -59,33 +59,25 @@ bg-gradient-to-t from-l-container px-10 dark:from-d-container dark:via-d-contain
 		<!--------[ BOTTOM ]-------->
 
 		<!--[ LANGUAGE ]-->
-		<div class="px-10 pt-10">
+		<div class="px-10 pt-5">
 			<SongLanguageList SelectedSong="selectedSong" Songs="languagesOfSelectedSong" SelectedSongChanged="SelectedSongChanged"></SongLanguageList>
 		</div>
 
 		<!--[ LYRICS ]-->
-		<div class="flex flex-col px-10 space-y-3">
+		<div class="flex flex-col mx-10 space-y-2 overflow-auto h-full mb-5 rounded-3xl">
 
-			<div class="border-y-2 border-sidepanel to-l-container/0 w-full items-center rounded-3xl relative
-py-3 text-center text-sm bg-container hover:bg-primary hover:text-accented-on-primary cursor-pointer whitespace-pre">
-				<div class="absolute top-4 left-7">1</div>
-Amazing grace,
-How sweet the sound,
-That saved a wretch like me!
-I once was lost,
-but now I'm found,
-Was blind, but now I see.
-			</div>
+			@foreach(var lyric in selectedSong.Lyrics())
+			{
+				<div class="border-y-2 border-sidepanel w-full items-center rounded-3xl relative flex
+ text-center text-sm bg-container hover:bg-primary hover:bg-opacity-50 dark:hover:bg-opacity-15 hover:text-accented-on-primary cursor-pointer whitespace-pre">
 
-			<div class="border-y-2 border-sidepanel to-l-container/0 w-full items-center rounded-3xl
-py-3 text-center text-sm bg-container hover:bg-primary hover:text-accented-on-primary cursor-pointer whitespace-pre">
-Amazing grace,
-How sweet the sound,
-That saved a wretch like me!
-I once was lost,
-but now I'm found,
-Was blind, but now I see.
-			</div>
+					<span class="absolute top-3 left-5 text-xs">@lyric.Line</span>
+					<p class="py-4 w-full h-fit text-sm">@lyric.Text
+					</p>
+				</div>
+				
+			}
+
 		</div>
 
 
