--- a/Beacon/wwwroot/css/output.css
+++ b/Beacon/wwwroot/css/output.css
@@ -1012,36 +1012,12 @@ select {
   position: relative;
 }
 
-.left-0 {
-  left: 0px;
-}
-
-.top-0 {
-  top: 0px;
-}
-
-.left-2 {
-  left: 0.5rem;
-}
-
-.top-3 {
-  top: 0.75rem;
-}
-
 .left-5 {
   left: 1.25rem;
 }
 
-.left-10 {
-  left: 2.5rem;
-}
-
-.left-7 {
-  left: 1.75rem;
-}
-
-.top-4 {
-  top: 1rem;
+.top-3 {
+  top: 0.75rem;
 }
 
 .z-0 {
@@ -1052,8 +1028,17 @@ select {
   z-index: 10;
 }
 
-.col-span-6 {
-  grid-column: span 6 / span 6;
+.col-span-5 {
+  grid-column: span 5 / span 5;
+}
+
+.col-span-7 {
+  grid-column: span 7 / span 7;
+}
+
+.mx-10 {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
 }
 
 .mx-3 {
@@ -1198,6 +1183,12 @@ select {
   cursor: pointer;
 }
 
+.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -1246,6 +1237,12 @@ select {
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-x-5 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1256,24 +1253,6 @@ select {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
-}
-
-.space-x-5 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.25rem * var(--tw-space-x-reverse));
-  margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-y-10 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
-}
-
-.space-y-5 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]) {
@@ -1312,6 +1291,10 @@ select {
   border-radius: 0.25rem;
 }
 
+.rounded-3xl {
+  border-radius: 1.5rem;
+}
+
 .rounded-\[6px\] {
   border-radius: 6px;
 }
@@ -1322,10 +1305,6 @@ select {
 
 .rounded-xl {
   border-radius: 0.75rem;
-}
-
-.rounded-3xl {
-  border-radius: 1.5rem;
 }
 
 .rounded-b-3xl {
@@ -1349,16 +1328,6 @@ select {
 .border-y-2 {
   border-top-width: 2px;
   border-bottom-width: 2px;
-}
-
-.border-x-2 {
-  border-left-width: 2px;
-  border-right-width: 2px;
-}
-
-.border-x-4 {
-  border-left-width: 4px;
-  border-right-width: 4px;
 }
 
 .border-b-2 {
@@ -1408,10 +1377,6 @@ select {
 
 .bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
-}
-
-.bg-gradient-to-b {
-  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
 .from-l-container {
@@ -1471,6 +1436,11 @@ select {
   padding-bottom: 3rem;
 }
 
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
@@ -1481,17 +1451,8 @@ select {
   padding-bottom: 2rem;
 }
 
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
-.pb-0 {
-  padding-bottom: 0px;
-}
-
-.pt-10 {
-  padding-top: 2.5rem;
+.pt-5 {
+  padding-top: 1.25rem;
 }
 
 .text-center {
@@ -1538,6 +1499,10 @@ select {
 
 .font-bold {
   font-weight: 700;
+}
+
+.font-thin {
+  font-weight: 100;
 }
 
 .capitalize {
@@ -1611,6 +1576,24 @@ select {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.placeholder-l-text::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(81 81 94 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-l-text::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(81 81 94 / var(--tw-placeholder-opacity));
+}
+
+.placeholder-opacity-50::-moz-placeholder {
+  --tw-placeholder-opacity: 0.5;
+}
+
+.placeholder-opacity-50::placeholder {
+  --tw-placeholder-opacity: 0.5;
+}
+
 .opacity-25 {
   opacity: 0.25;
 }
@@ -1627,6 +1610,11 @@ select {
 
 .outline-0 {
   outline-width: 0px;
+}
+
+.ring-l-primary {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(33 95 229 / var(--tw-ring-opacity));
 }
 
 @font-face {
@@ -1865,12 +1853,18 @@ a, .btn-link {
     background-color: rgb(35 93 218 / var(--tw-bg-opacity));
   }
 
-  .hover\:bg-opacity-50:hover {
-    --tw-bg-opacity: 0.5;
+  .group:hover .group-hover\:bg-primary {
+    --tw-bg-opacity: 1;
+    background-color: rgb(33 95 229 / var(--tw-bg-opacity));
   }
 
-  .hover\:bg-none:hover {
-    background-image: none;
+  .group:hover .group-hover\:bg-primary:is(.dark *) {
+    --tw-bg-opacity: 1;
+    background-color: rgb(35 93 218 / var(--tw-bg-opacity));
+  }
+
+  .hover\:bg-opacity-50:hover {
+    --tw-bg-opacity: 0.5;
   }
 
   .hover\:text-d-text-accent:hover {
@@ -1983,11 +1977,6 @@ a, .btn-link {
   --tw-gradient-stops: var(--tw-gradient-from), rgb(25 25 26 / 0.25) var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
-.dark\:via-d-container\/75:is(.dark *) {
-  --tw-gradient-to: rgb(25 25 26 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), rgb(25 25 26 / 0.75) var(--tw-gradient-via-position), var(--tw-gradient-to);
-}
-
 .dark\:to-d-container\/0:is(.dark *) {
   --tw-gradient-to: rgb(25 25 26 / 0) var(--tw-gradient-to-position);
 }
@@ -2000,6 +1989,29 @@ a, .btn-link {
 .dark\:text-d-text-accent:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(245 243 245 / var(--tw-text-opacity));
+}
+
+.dark\:placeholder-d-text:is(.dark *)::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(154 152 154 / var(--tw-placeholder-opacity));
+}
+
+.dark\:placeholder-d-text:is(.dark *)::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(154 152 154 / var(--tw-placeholder-opacity));
+}
+
+.dark\:placeholder-opacity-50:is(.dark *)::-moz-placeholder {
+  --tw-placeholder-opacity: 0.5;
+}
+
+.dark\:placeholder-opacity-50:is(.dark *)::placeholder {
+  --tw-placeholder-opacity: 0.5;
+}
+
+.dark\:ring-d-primary:is(.dark *) {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(35 93 218 / var(--tw-ring-opacity));
 }
 
 @media (hover: hover) and (pointer: fine) {
