--- a/Beacon/Blazor/Components/Controls/BeaconCheckBox.razor
+++ b/Beacon/Blazor/Components/Controls/BeaconCheckBox.razor
@@ -3,8 +3,8 @@
                         IsChecked = !IsChecked;
                         await OnClick.InvokeAsync();
                     }" class="flex space-x-3 group items-center">
-    <div class="border-2 space-x-3 text-xs flex items-center justify-center size-5 rounded-[6px] border-l-text-accent/20 dark:border-d-text-accent/10
-			@(IsChecked ? "bg-primary text-accented-on-primary" :
+    <div class="border-2 border-l-text-accent/20 flex size-5 items-center justify-center space-x-3 rounded-[6px] text-xs dark:border-d-text-accent/10
+@(IsChecked ? "bg-primary text-accented-on-primary" :
                             "group-hover:bg-primary group-hoverhover:bg-opacity-50 group-hoverhover:text-accented-on-primary h")">
 
     </div>
