--- a/Beacon/WPF/MainWindow.xaml
+++ b/Beacon/WPF/MainWindow.xaml
@@ -7,10 +7,11 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:Beacon"
     xmlns:blazor="clr-namespace:Beacon.Blazor"
+    xmlns:model="clr-namespace:Beacon.Model"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Beacon"
     WindowStyle="None"
-    Height="720"
+    Height="{Binding Source={x:Static model:Settings.ProjectorHeight}}"
     Width="1280"
     MinHeight="600"
     MinWidth="900"
