--- a/Beacon/wwwroot/css/output.css
+++ b/Beacon/wwwroot/css/output.css
@@ -749,40 +749,6 @@ select {
   outline: 1px auto -webkit-focus-ring-color;
 }
 
-.container {
-  width: 100%;
-}
-
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-  }
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
-}
-
 .form-input,.form-textarea,.form-select,.form-multiselect {
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -1008,6 +974,16 @@ select {
   color: rgb(206 154 76 / var(--tw-text-opacity));
 }
 
+.text-red {
+  --tw-text-opacity: 1;
+  color: rgb(232 94 94 / var(--tw-text-opacity));
+}
+
+.text-red:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(224 98 98 / var(--tw-text-opacity));
+}
+
 .bg-sidepanel {
   --tw-bg-opacity: 1;
   background-color: rgb(245 243 245 / var(--tw-bg-opacity));
@@ -1026,6 +1002,16 @@ select {
 .border-sidepanel:is(.dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(37 37 39 / var(--tw-border-opacity));
+}
+
+.bg-red {
+  --tw-bg-opacity: 1;
+  background-color: rgb(232 94 94 / var(--tw-bg-opacity));
+}
+
+.bg-red:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(224 98 98 / var(--tw-bg-opacity));
 }
 
 .bg-container {
@@ -1066,8 +1052,16 @@ select {
   position: relative;
 }
 
+.left-0 {
+  left: 0px;
+}
+
 .left-5 {
   left: 1.25rem;
+}
+
+.top-0 {
+  top: 0px;
 }
 
 .top-3 {
@@ -1082,6 +1076,10 @@ select {
   z-index: 10;
 }
 
+.z-40 {
+  z-index: 40;
+}
+
 .col-span-5 {
   grid-column: span 5 / span 5;
 }
@@ -1092,10 +1090,6 @@ select {
 
 .m-px {
   margin: 1px;
-}
-
-.m-1 {
-  margin: 0.25rem;
 }
 
 .mx-10 {
@@ -1116,6 +1110,14 @@ select {
 .mx-px {
   margin-left: 1px;
   margin-right: 1px;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 
 .mb-5 {
@@ -1144,22 +1146,6 @@ select {
 
 .mt-8 {
   margin-top: 2rem;
-}
-
-.-mb-5 {
-  margin-bottom: -1.25rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
-.mb-3 {
-  margin-bottom: 0.75rem;
 }
 
 .block {
@@ -1197,6 +1183,10 @@ select {
   height: 1.25rem;
 }
 
+.h-1\/2 {
+  height: 50%;
+}
+
 .h-10 {
   height: 2.5rem;
 }
@@ -1226,16 +1216,13 @@ select {
   height: 100vh;
 }
 
-.h-1\/2 {
-  height: 50%;
-}
-
-.h-12 {
-  height: 3rem;
-}
-
 .w-20 {
   width: 5rem;
+}
+
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .w-full {
@@ -1244,11 +1231,6 @@ select {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content;
 }
 
 .min-w-20 {
@@ -1321,6 +1303,12 @@ select {
   gap: 1.5rem;
 }
 
+.space-x-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .space-x-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.75rem * var(--tw-space-x-reverse));
@@ -1339,6 +1327,12 @@ select {
   margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-y-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+}
+
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1349,12 +1343,6 @@ select {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
-}
-
-.space-y-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]) {
@@ -1401,20 +1389,16 @@ select {
   border-radius: 6px;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
 }
 
 .rounded-xl {
   border-radius: 0.75rem;
-}
-
-.rounded-sm {
-  border-radius: 0.125rem;
-}
-
-.rounded-lg {
-  border-radius: 0.5rem;
 }
 
 .rounded-b-3xl {
@@ -1471,6 +1455,11 @@ select {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-d-background {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 15 15 / var(--tw-bg-opacity));
+}
+
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -1487,10 +1476,6 @@ select {
 
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
-}
-
-.bg-opacity-50 {
-  --tw-bg-opacity: 0.5;
 }
 
 .bg-gradient-to-t {
@@ -1524,8 +1509,8 @@ select {
   padding: 0.75rem;
 }
 
-.p-4 {
-  padding: 1rem;
+.p-5 {
+  padding: 1.25rem;
 }
 
 .px-0\.5 {
@@ -1541,6 +1526,11 @@ select {
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .px-5 {
@@ -1563,6 +1553,11 @@ select {
   padding-bottom: 3rem;
 }
 
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -1576,16 +1571,6 @@ select {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
 }
 
 .pt-5 {
@@ -1652,14 +1637,6 @@ select {
 
 .leading-7 {
   line-height: 1.75rem;
-}
-
-.leading-9 {
-  line-height: 2.25rem;
-}
-
-.leading-8 {
-  line-height: 2rem;
 }
 
 .tracking-widest {
@@ -1991,6 +1968,26 @@ a, .btn-link {
 }
 
 @media (hover: hover) and (pointer: fine) {
+  .hover\:text-default:hover {
+    --tw-text-opacity: 1;
+    color: rgb(81 81 94 / var(--tw-text-opacity));
+  }
+
+  .hover\:text-default:hover:is(.dark *) {
+    --tw-text-opacity: 1;
+    color: rgb(154 152 154 / var(--tw-text-opacity));
+  }
+
+  .hover\:text-accented:hover {
+    --tw-text-opacity: 1;
+    color: rgb(24 24 31 / var(--tw-text-opacity));
+  }
+
+  .hover\:text-accented:hover:is(.dark *) {
+    --tw-text-opacity: 1;
+    color: rgb(245 243 245 / var(--tw-text-opacity));
+  }
+
   .hover\:text-primary:hover {
     --tw-text-opacity: 1;
     color: rgb(33 95 229 / var(--tw-text-opacity));
@@ -2004,6 +2001,26 @@ a, .btn-link {
   .hover\:text-accented-on-primary:hover {
     --tw-text-opacity: 1;
     color: rgb(245 243 245 / var(--tw-text-opacity));
+  }
+
+  .hover\:bg-sidepanel:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(245 243 245 / var(--tw-bg-opacity));
+  }
+
+  .hover\:bg-sidepanel:hover:is(.dark *) {
+    --tw-bg-opacity: 1;
+    background-color: rgb(37 37 39 / var(--tw-bg-opacity));
+  }
+
+  .hover\:bg-red:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(232 94 94 / var(--tw-bg-opacity));
+  }
+
+  .hover\:bg-red:hover:is(.dark *) {
+    --tw-bg-opacity: 1;
+    background-color: rgb(224 98 98 / var(--tw-bg-opacity));
   }
 
   .hover\:bg-primary:hover {
@@ -2025,17 +2042,7 @@ a, .btn-link {
     --tw-bg-opacity: 1;
     background-color: rgb(35 93 218 / var(--tw-bg-opacity));
   }
-}
 
-.placeholder\:opacity-50::-moz-placeholder {
-  opacity: 0.5;
-}
-
-.placeholder\:opacity-50::placeholder {
-  opacity: 0.5;
-}
-
-@media (hover: hover) and (pointer: fine) {
   .hover\:bg-l-red:hover {
     --tw-bg-opacity: 1;
     background-color: rgb(232 94 94 / var(--tw-bg-opacity));
@@ -2190,10 +2197,6 @@ a, .btn-link {
 
 .dark\:placeholder-opacity-50:is(.dark *)::placeholder {
   --tw-placeholder-opacity: 0.5;
-}
-
-.dark\:opacity-50:is(.dark *) {
-  opacity: 0.5;
 }
 
 .dark\:ring-d-primary:is(.dark *) {
