--- a/Beacon/Blazor/_Imports.razor
+++ b/Beacon/Blazor/_Imports.razor
@@ -5,7 +5,7 @@
 
 @using Beacon
 @using Beacon.Model
-@using Beacon.Model.Enum
+@using Beacon.Model.Enums
 @using Beacon.Model.Songs
 @using Beacon.Blazor
 @using Beacon.Blazor.Pages
@@ -13,4 +13,5 @@
 @using Beacon.Blazor.Components.Songs
 @using Beacon.Blazor.Components.Controls
 
+@using WpfScreenHelper
 @using Majorsoft.Blazor.Components.Debounce
