--- a/Beacon/Blazor/Pages/SongLibrary.razor
+++ b/Beacon/Blazor/Pages/SongLibrary.razor
@@ -2,58 +2,57 @@
 @inject ISongService SongService
 @inject IJSRuntime jSRuntime
 
-<div class="absolute @(showDeleteModal ?  "flex" : "hidden") justify-center items-center top-0 left-0 w-full h-full bg-d-background bg-opacity-25 z-40">
+<div class="z-40 @(showDeleteModal ?  "flex" : "hidden") absolute left-0 top-0 h-full w-full items-center justify-center bg-d-background bg-opacity-25">
 
-	<div class="bg-container rounded-xl space-y-3 p-10">
-		<label class="font-bold tracking-widest opacity-50 text-accented">DELETE CONFIRMATION</label>
+	<div class="bg-container max-w-[500px] space-y-3 rounded-xl p-10">
+		<label class="text-accented font-bold tracking-widest opacity-50">DELETE CONFIRMATION</label>
 		<br />
-		Are you sure you want to delete <span class="italic text-red">@songToDelete.Title</span>?
-
-		<div class="flex space-x-3">
-			<BeaconButton Message="Yes" Background="bg-red" Hover="hover:bg-sidepanel hover:text-default text-accented-on-primary" OnClick="DeleteSong"></BeaconButton>
+		<p class="break-normal">Are you sure you want to delete <span class="text-red italic">@songToDelete.Title</span>?
+		</p>
+		<div class="flex justify-end space-x-3">
 			<BeaconButton Message="No" OnClick="() => showDeleteModal = false" ></BeaconButton>
-
+			<BeaconButton Message="Yes" Background="bg-red" Hover="hover:bg-sidepanel hover:text-default text-accented-on-primary" OnClick="DeleteSong"></BeaconButton>
 		</div>
 	</div>
 
 </div>
 
-<div class="grid-cols-12 grid h-full w-full relative">
+<div class="grid-cols-12 relative grid h-full w-full">
 
 	<!-- |===== LEFT SIDE ======| -->
-	<div class="border-r-2 col-span-5 border-sidepanel bg-container h-full  overflow-hidden rounded-r-3xl p-10">
+	<div class="border-r-2 col-span-5 border-sidepanel bg-container h-full overflow-hidden rounded-r-3xl p-10">
 
-		<div class="@(editMode ? "" : "hidden") flex flex-col w-full h-full  ">
+		<div class="@(editMode ? "" : "hidden") flex h-full w-full flex-col">
 			<!--[ EDIT MODE: Lyric Text]-->
-			<label class="font-bold tracking-widest opacity-50 text-accented">LYRIC EDITOR</label>
-			<textarea class="bg-sidepanel text-default text-sm m-px border-0 mb-3 w-full min-h-1/2 h-1/2 max-h-1/2 rounded-xl px-4 py-3 placeholder-l-text placeholder-opacity-50 ring-l-primary ring-opacity-50 focus:ring-1 dark:ring-d-primary dark:placeholder-d-text dark:placeholder-opacity-50"
+			<label class="text-accented font-bold tracking-widest opacity-50">LYRIC EDITOR</label>
+			<textarea class="bg-sidepanel text-default border-0 min-h-1/2 max-h-1/2 m-px mb-3 h-1/2 w-full rounded-xl px-4 py-3 text-sm placeholder-l-text placeholder-opacity-50 ring-l-primary ring-opacity-50 focus:ring-1 dark:ring-d-primary dark:placeholder-d-text dark:placeholder-opacity-50"
 					  value="@selectedSong.LyricText" @oninput="(e => { selectedSong.LyricText = e.Value.ToString(); UpdateLyrics();})" spellcheck="false" placeholder="Lyric" />
 			<!--[ EDIT MODE: Sequence ]-->
 
-			<label class="font-bold tracking-widest opacity-50 text-accented">SEQUENCE</label>
-			<input class="bg-sidepanel text-default text-sm m-px border-0 mb-3 w-full rounded-xl px-4 py-3 placeholder-l-text placeholder-opacity-50 ring-l-primary ring-opacity-50 focus:ring-1 dark:ring-d-primary dark:placeholder-d-text dark:placeholder-opacity-50"
+			<label class="text-accented font-bold tracking-widest opacity-50">SEQUENCE</label>
+			<input class="bg-sidepanel text-default border-0 m-px mb-3 w-full rounded-xl px-4 py-3 text-sm placeholder-l-text placeholder-opacity-50 ring-l-primary ring-opacity-50 focus:ring-1 dark:ring-d-primary dark:placeholder-d-text dark:placeholder-opacity-50"
 					  value="@selectedSong.Sequence" @oninput="(e => { selectedSong.Sequence = e.Value.ToString(); UpdateLyrics();})" spellcheck="false" placeholder="[ 1, C, 2... ]" />
 
 			<!--[ EDIT MODE: Tags ]-->
-			<label class="font-bold tracking-widest opacity-50 text-accented">TAGS</label>
-			<input class="bg-sidepanel text-default text-sm m-px border-0 mb-3 w-full rounded-xl px-4 py-3 placeholder-l-text placeholder-opacity-50 ring-l-primary ring-opacity-50 focus:ring-1 dark:ring-d-primary dark:placeholder-d-text dark:placeholder-opacity-50"
+			<label class="text-accented font-bold tracking-widest opacity-50">TAGS</label>
+			<input class="bg-sidepanel text-default border-0 m-px mb-3 w-full rounded-xl px-4 py-3 text-sm placeholder-l-text placeholder-opacity-50 ring-l-primary ring-opacity-50 focus:ring-1 dark:ring-d-primary dark:placeholder-d-text dark:placeholder-opacity-50"
 					  value="@selectedSong.Tags" @oninput="(e => { selectedSong.Tags = e.Value.ToString(); UpdateLyrics();})" spellcheck="false" placeholder="Solemn, Joyful, Communion, Blood" />
 
 		</div>
 
-		<div class="@(editMode ? "hidden" : "") flex flex-col w-full h-full space-y-3 overflow-hidden">
+		<div class="@(editMode ? "hidden" : "") flex h-full w-full flex-col space-y-3 overflow-hidden">
 
 			<!--[ SEARCH INPUT ]-->
 			<div class="flex w-full flex-col space-y-2">
 				<BeaconSearchMode ActiveSearchMode="currentSearchMode" SearchModeChanged="switchSearchMode"></BeaconSearchMode>
-				<DebounceInput class="bg-default text-accented border-0 h-16 mx-px rounded-xl px-3 text-sm placeholder-l-text placeholder-opacity-50 ring-l-primary focus:ring-1 dark:ring-d-primary dark:placeholder-d-text dark:placeholder-opacity-50"
+				<DebounceInput class="bg-default text-accented border-0 mx-px h-16 rounded-xl px-3 text-sm placeholder-l-text placeholder-opacity-50 ring-l-primary focus:ring-1 dark:ring-d-primary dark:placeholder-d-text dark:placeholder-opacity-50"
 							   placeholder="Search" @bind-Value="searchText" @bind-Value:event="oninput" OnValueChanged="OnSearchChanged"
 							   DebounceTime="100" ></DebounceInput>
 			</div>
 
 			<!--[ SONG LIST ]-->
 			<SongList Songs="songs" SelectedSong="selectedSong" IsQueueMode="isQueueMode" SelectedSongChanged="SelectedSongChanged"
-						SongDeletionRequest="SongDeleteClick" ></SongList>
+					  SongDeletionRequest="SongDeleteClick" SongAddToQueue="AddToQueueClick" SongRemoveFromQueue="RemoveFromQueueClick"></SongList>
 
 			<!--[ QUEUE AND ADD SONG ]-->
 			<div class="flex justify-between">
@@ -74,13 +73,13 @@
 
 			<!--[ KEY ]-->
 			<div class="bg-sidepanel flex size-16 flex-none items-center justify-center rounded-xl">
-				<input class="text-l-text-accent flex text-center text-2xl dark:text-d-text-accent bg-transparent border-0 focus:ring-0"
+				<input class="text-l-text-accent border-0 flex bg-transparent text-center text-2xl focus:ring-0 dark:text-d-text-accent"
 					   placeholder="Key" @bind-value="@selectedSong.Key" @bind-value:event="oninput" spellcheck="false" disabled="@(!editMode)"/>
 			</div>
 
 
 			<!--[ TITLE AND AUTHOR ]-->
-			<p class="flex-1 mx-3 truncate leading-7">
+			<p class="flex-1 leading-7 mx-3 truncate">
 				@if (!editMode)
 				{
 					<span class="text-accented w-full text-3xl font-bold">@selectedSong.Title</span><br />
@@ -89,12 +88,12 @@
 				}
 				else
 				{
-					<input class="bg-sidepanel text-accented m-px border-0 w-full rounded-lg px-3 py-0.5 text-lg placeholder-l-text placeholder-opacity-50 ring-l-primary ring-opacity-50 focus:ring-1 dark:ring-d-primary dark:placeholder-d-text dark:placeholder-opacity-50"
+					<input class="bg-sidepanel text-accented border-0 m-px w-full rounded-lg px-3 py-0.5 text-lg placeholder-l-text placeholder-opacity-50 ring-l-primary ring-opacity-50 focus:ring-1 dark:ring-d-primary dark:placeholder-d-text dark:placeholder-opacity-50"
 						   @bind-value="@selectedSong.Title" @bind-value:event="oninput" spellcheck="false" placeholder="Song Title" />
 
 					<br />
 
-					<input class="bg-sidepanel text-accented m-px border-0 rounded-lg px-3 py-0.5 text-sm placeholder-l-text placeholder-opacity-50 ring-l-primary focus:ring-1 dark:ring-d-primary dark:placeholder-d-text dark:placeholder-opacity-50"
+					<input class="bg-sidepanel text-accented border-0 m-px rounded-lg px-3 py-0.5 text-sm placeholder-l-text placeholder-opacity-50 ring-l-primary focus:ring-1 dark:ring-d-primary dark:placeholder-d-text dark:placeholder-opacity-50"
 						   @bind-value="selectedSong.Author" @bind-value:event="oninput" spellcheck="false" placeholder="Author" />
 				}
 			</p>
@@ -122,8 +121,8 @@
 		<div class="px-10 pt-5">
 			@if (editMode)
 			{
-				<label class="font-bold tracking-widest opacity-50 text-accented">LANGUAGE</label>
-				<input class="bg-sidepanel text-default text-sm m-px mb-2 border-0 w-fit rounded-xl px-4 py-3 placeholder-l-text placeholder-opacity-50 ring-l-primary ring-opacity-50 focus:ring-1 dark:ring-d-primary dark:placeholder-d-text dark:placeholder-opacity-50"
+				<label class="text-accented font-bold tracking-widest opacity-50">LANGUAGE</label>
+				<input class="bg-sidepanel text-default border-0 m-px mb-2 w-fit rounded-xl px-4 py-3 text-sm placeholder-l-text placeholder-opacity-50 ring-l-primary ring-opacity-50 focus:ring-1 dark:ring-d-primary dark:placeholder-d-text dark:placeholder-opacity-50"
 					   value="@selectedSong.Language" @oninput="(e => { selectedSong.Language = e.Value.ToString(); UpdateLyrics();})" spellcheck="false" placeholder="Language" />
 
 			}
